--- a/src/components/organisms/branches/branches.module.css
+++ b/src/components/organisms/branches/branches.module.css
@@ -3,8 +3,10 @@
     display: flex;
     flex-wrap: wrap;
     padding: 0.5rem;
+    gap: 0.8rem;
 }
 
 .current {
-    background-color: green;
+    background-color: var(--light-gray);
+    color: var(--dark-gray);
 }
